# adventure-gemini

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
src/adventure/: __init__.py  app.py  config.py  logging.py  models.py  session.py  users.py
src/adventure/engine/: commands.py  loader.py  state.py  world.py
src/adventure/routes/: home.py  play.py
src/adventure/templates/: about.gmi  help.gmi  home.gmi  play.gmi
tests/: conftest.py  test_commands.py  test_loader.py  test_routes.py  test_state.py  test_walkthrough.py
